[project]
name = "adam-pyoorb"
version = "0.1.0"
description = 'ADAM Core Propagator class using PYOORB'
authors = [
    { name = "Alec Koumjian", email = "akoumjian@gmail.com" },
]
readme = "README.md"
keywords = []
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyoorb @ git+https://github.com/B612-Asteroid-Institute/oorb.git@fork",
    "naif-de440",
    "numpy",
    "ray",
    "spiceypy>=6.0.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.pdm.build]
includes = ["src/adam_core/"]

[project.urls]
"Documentation" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb#readme"
"Issues" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb/issues"
"Source" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "isort",
    "ipython"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


