[project]
name = "adam-pyoorb"
version = "0.1.0"
description = 'ADAM Core Propagator class using PYOORB'
authors = [
    { name = "Alec Koumjian", email = "akoumjian@gmail.com" },
]
readme = "README.md"
keywords = []
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyoorb @ git+https://github.com/B612-Asteroid-Institute/oorb.git@fork",
    "adam-core @ git+https://github.com/B612-Asteroid-Institute/adam_core.git@ak/remove-pyoorb",
    "naif-de440",
    "quivr==0.7.3a1",
    "numpy",
    "ray",
    "spiceypy>=6.0.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.pdm.build]
includes = ["src/adam_core/"]

[project.urls]
"Documentation" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb#readme"
"Issues" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb/issues"
"Source" = "https://github.com/B612-Asteroid-Institute/adam-pyoorb"


[project.optional-dependencies]
dev = [
    "pdm",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "ruff",
    "mypy",
    "isort",
    "ipython"
]

[tool.pdm.scripts]
check = {composite = ["lint", "typecheck", "test"]}
format = { composite = ["black ./src/adam_core", "isort ./src/adam_core"]}
lint = { composite = ["ruff check ./src/adam_core", "black --check ./src/adam_core", "isort --check-only ./src/adam_core"] }
fix = "ruff ./src/adam_core --fix"
typecheck = "mypy --strict ./src/adam_core"

test = "pytest --benchmark-disable {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only"
coverage = "pytest --cov=src/adam_core/propagators/adam_pyoorb --cov-report=xml"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyoorb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adam_core.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "adam_core.propagators.adam_assist"
ignore_errors = true
